force-app/main/default/objects/Test_Run_Method_Result__c/Test_Run_Method_Result__c.object-meta.xml
<CustomObject>
    <label>Test Run Method Result</label>
    <nameField>
        <label>Apex Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Run Method Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>