force-app/main/default/objects/Test_Run_Method_Result__c/fields/Failure_Audit__c.field-meta.xml
<CustomField>
    <fullName>Failure_Audit__c</fullName>
    <formula>IF(Method_Pass__c == false,
&quot;SELECT Id, Action, CreatedBy.Name, CreatedDate, Display, Section FROM SetupAuditTrail WHERE CreatedDate &gt; &quot; &amp; SUBSTITUTE(TEXT(Last_Success__c), &apos; &apos;, &apos;T&apos;) &amp; &quot; AND CreatedDate &lt; &quot; &amp; SUBSTITUTE(TEXT(First_Failure__c), &apos; &apos;, &apos;T&apos;),
&quot;Method Passed&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failure Audit</label>
    <type>Text</type>
</CustomField>