force-app/main/default/objects/Test_Run_Method_Result__c/fields/First_Failure__c.field-meta.xml
<CustomField>
    <fullName>First_Failure__c</fullName>
    <description>DateTime of first failed attempt at test</description>
    <label>First Failure</label>
    <type>DateTime</type>
</CustomField>