force-app/main/default/objects/Test_Run_Method_Result__c/fields/New_Failure__c.field-meta.xml
<CustomField>
    <fullName>New_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if first time test failed</description>
    <label>New Failure</label>
    <type>Checkbox</type>
</CustomField>