force-app/main/default/objects/Test_Run_Method_Result__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <description>Run time of test method in milliseconds</description>
    <label>Run Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>